# prod-manager-api

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  poetry.toml  pyproject.toml
.gitlab/: CODEOWNERS
.gitlab/merge_request_templates/: release.md
docs/: api-usage-advanced.md  api-usage.md  faq.md
docs/api-objects/: announcement.md  incident.md  maintenance.md  monitor.md  scope.md  service.md  weather.md
prodmanager/: __init__.py  base.py  client.py  log.py
tests/resources/: mock.py  test_monitor.py  test_scope.py  test_service.py  test_weather.py  utils.py
tests/resources/mock_responses/: monitor.py  scope.py  service.py  weather.py
