[tool.poetry]

name = "prod-manager"
version = "0.1.2"
description = "Interact with a ProdManager instance"
homepage = "https://gitlab.com/prod-manager/prod-manager-api"
repository = "https://gitlab.com/prod-manager/prod-manager-api"
documentation = "https://prod-manager-api.tiwabbit.fr"

keywords = ["prod-manager"]

license = "GPL-3.0"

authors = [
    "Lunik <lunik@tiwabbit.fr>"
]
maintainers = [
    "Lunik <lunik@tiwabbit.fr>"
]

readme = "README.md"

packages = [
    { include = "prodmanager" },
]

include = [
    "CHANGELOG.md"
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.13.0"

[tool.poetry.group.test.dependencies]
pytest = "*"
responses = "*"
pylint = "*"
pytest-cov = "*"
pytest-html = "*"
pytest-xdist = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
mkdocs-git-revision-date-localized-plugin = "*"